# django_quote_service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Aptfile  Dockerfile  Justfile  LICENSE  Procfile  README.md  docker-entrypoint.sh  fly.toml  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml  codestyle.yml  container.yml
config/: __init__.py  api_router.py  asgi.py  urls.py  websocket.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
django_quote_service/: __init__.py  conftest.py
django_quote_service/contrib/sites/: __init__.py
django_quote_service/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
django_quote_service/quotes/: admin.py  apps.py  markov_utils.py  models.py  receivers.py  urls.py  views.py
django_quote_service/quotes/api/: serializers.py  views.py
django_quote_service/quotes/management/commands/: makemarkov.py
django_quote_service/quotes/migrations/: 0001_initial.py  0002_alter_charactergroup_options_charactergroup_slug_and_more.py  0003_quote_citation_quote_citation_url.py  0004_quoteusagestats_quotestats.py  0005_characterstats_groupstats_delete_quoteusagestats.py  0006_alter_quotestats_quote.py  0007_groupmarkovmodel.py  0008_auto_20220217_1942.py
django_quote_service/quotes/templates/: character_group_create.html  character_group_delete.html  character_group_detail.html  character_group_list.html  character_group_update.html
django_quote_service/quotes/templates/quotes/: character_create.html  character_delete.html  character_detail.html  character_group_create.html  character_group_delete.html  character_group_detail.html  character_group_list.html  character_group_update.html  character_list.html  character_update.html  quote_create.html  quote_delete.html  quote_detail.html  quote_list.html  quote_update.html
django_quote_service/quotes/tests/: test_api.py  test_docs.py  test_management.py  test_models.py  test_signals.py  test_views.py
django_quote_service/static/sass/: project.scss
django_quote_service/templates/: 403.html  404.html  500.html  base.html  error_base.html
django_quote_service/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
django_quote_service/templates/pages/: about.html
django_quote_service/templates/users/: user_detail.html  user_form.html
django_quote_service/users/: __init__.py  adapters.py  admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
django_quote_service/users/api/: __init__.py  serializers.py  views.py
django_quote_service/users/tests/: __init__.py  factories.py  test_account_urls.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_swagger_ui.py  test_urls.py  test_views.py
django_quote_service/utils/: __init__.py  storages.py
docs/: Makefile  conf.py  howto.rst  index.rst  managing_quotes.rst  users.rst
docs/pycharm/: configuration.rst
requirements/: base.txt  local.txt  production.txt
