[tool.poetry]
name = "django_quote_service"
version = "0.1.0"
description = "A simple service for collecting character quotes and exposing random quotes or markov chain generated quotes via an API."
authors = ["Daniel Andrlik <daniel@andrlik.org>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2022.1"
python-slugify = "^6.1.1"
Pillow = "^9.0.1"
rcssmin = "^1.1.0"
argon2-cffi = "^21.3.0"
whitenoise = "^6.0.0"
redis = "^4.3.3"
hiredis = "^2.0.0"
uvicorn = "^0.17.4"
django-environ = "^0.8.1"
Django = "^4.0.2"
django-model-utils = "^4.2.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
django-redis = "^5.2.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
drf-spectacular = "^0.21.2"
django-allauth = "^0.50.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
sentry-sdk = "^1.5.4"
django-storages = {extras = ["boto3"], version = "^1.12.3"}
django-anymail = {extras = ["sendgrid"], version = "^8.5"}
markovify = "^0.9.3"
rules = "^3.3"
django-compressor = "^3.1"
Brotli = "^1.0.9"
Markdown = "^3.3.6"
Sphinx = {version = "^4.4.0", optional=true}
sphinx-autobuild = {version = "^2021.3.14", optional=true}
django-braces = "^1.15.0"
django-easy-logging = "^0.4.0"
django-libsass = "^0.9"
django-quotes = "^0.2.0"

[tool.poetry.dev-dependencies]
Werkzeug = {extras = ["watchdog"], version = "^2.1.2"}
ipdb = "^0.13.9"
psycopg2-binary = "^2.9.3"
watchgod = "^0.8"
mypy = "^0.942"
django-stubs = "^1.9.0"
pytest = "^7.0.0"
pytest-sugar = "^0.9.4"
djangorestframework-stubs = "^1.4.0"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
coverage = "^6.3.1"
black = {extras = ["d"], version = "^22.3.0"}
pylint-django = "^2.5.0"
pre-commit = "^2.19.0"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.2.4"
django-extensions = "^3.1.5"
django-coverage-plugin = "^2.0.2"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autobuild"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
